@@ -1441,6 +1441,22 @@ void on_GtkCheckButton_OnlineCat_toggled(GtkToggleButton *button,
 	gtk_widget_set_sensitive(combobox, !gtk_toggle_button_get_active(button));
 }
 
+void print_updated_wcs_data(fits *fit) {
+	/* debug output */
+	siril_debug_print("****Updated WCS data*************\n");
+	siril_debug_print("crpix1 = %*.12e\n", 20, fit->wcsdata.crpix[0]);
+	siril_debug_print("crpix2 = %*.12e\n", 20, fit->wcsdata.crpix[1]);
+	siril_debug_print("crval1 = %*.12e\n", 20, fit->wcsdata.crval[0]);
+	siril_debug_print("crval2 = %*.12e\n", 20, fit->wcsdata.crval[1]);
+	siril_debug_print("cdelt1 = %*.12e\n", 20, fit->wcsdata.cdelt[0]);
+	siril_debug_print("cdelt2 = %*.12e\n", 20, fit->wcsdata.cdelt[1]);
+	siril_debug_print("pc1_1  = %*.12e\n", 20, fit->wcsdata.pc[0][0]);
+	siril_debug_print("pc1_2  = %*.12e\n", 20, fit->wcsdata.pc[0][1]);
+	siril_debug_print("pc2_1  = %*.12e\n", 20, fit->wcsdata.pc[1][0]);
+	siril_debug_print("pc2_2  = %*.12e\n", 20, fit->wcsdata.pc[1][1]);
+	siril_debug_print("******************************************\n");
+}
+
 /******
  *
  * Public functions
@@ -1454,19 +1470,7 @@ void flip_bottom_up_astrometry_data(fits *fit) {
 	/* update crpix */
 	fit->wcsdata.crpix[1] = fit->ry - fit->wcsdata.crpix[1];
 
-	/* debug output */
-	siril_debug_print("****Updated WCS data*************\n");
-	siril_debug_print("crpix1 = %*.12e\n", 20, fit->wcsdata.crpix[0]);
-	siril_debug_print("crpix2 = %*.12e\n", 20, fit->wcsdata.crpix[1]);
-	siril_debug_print("crval1 = %*.12e\n", 20, fit->wcsdata.crval[0]);
-	siril_debug_print("crval2 = %*.12e\n", 20, fit->wcsdata.crval[1]);
-	siril_debug_print("cdelt1 = %*.12e\n", 20, fit->wcsdata.cdelt[0]);
-	siril_debug_print("cdelt2 = %*.12e\n", 20, fit->wcsdata.cdelt[1]);
-	siril_debug_print("pc1_1  = %*.12e\n", 20, fit->wcsdata.pc[0][0]);
-	siril_debug_print("pc1_2  = %*.12e\n", 20, fit->wcsdata.pc[0][1]);
-	siril_debug_print("pc2_1  = %*.12e\n", 20, fit->wcsdata.pc[1][0]);
-	siril_debug_print("pc2_2  = %*.12e\n", 20, fit->wcsdata.pc[1][1]);
-	siril_debug_print("******************************************\n");
+	print_updated_wcs_data(fit);
 }
 
 void flip_left_right_astrometry_data(fits *fit) {
@@ -1477,75 +1481,48 @@ void flip_left_right_astrometry_data(fits *fit) {
 	/* update crpix */
 	fit->wcsdata.crpix[0] = fit->rx - fit->wcsdata.crpix[0];
 
-	/* debug output */
-	siril_debug_print("****Updated WCS data*************\n");
-	siril_debug_print("crpix1 = %*.12e\n", 20, fit->wcsdata.crpix[0]);
-	siril_debug_print("crpix2 = %*.12e\n", 20, fit->wcsdata.crpix[1]);
-	siril_debug_print("crval1 = %*.12e\n", 20, fit->wcsdata.crval[0]);
-	siril_debug_print("crval2 = %*.12e\n", 20, fit->wcsdata.crval[1]);
-	siril_debug_print("cdelt1 = %*.12e\n", 20, fit->wcsdata.cdelt[0]);
-	siril_debug_print("cdelt2 = %*.12e\n", 20, fit->wcsdata.cdelt[1]);
-	siril_debug_print("pc1_1  = %*.12e\n", 20, fit->wcsdata.pc[0][0]);
-	siril_debug_print("pc1_2  = %*.12e\n", 20, fit->wcsdata.pc[0][1]);
-	siril_debug_print("pc2_1  = %*.12e\n", 20, fit->wcsdata.pc[1][0]);
-	siril_debug_print("pc2_2  = %*.12e\n", 20, fit->wcsdata.pc[1][1]);
-	siril_debug_print("******************************************\n");
+	print_updated_wcs_data(fit);
 }
 
-void rotate_astrometry_data(fits *fit, double angle) {
+void rotate_astrometry_data(fits *fit, point center, double angle, gboolean cropped) {
 	double pc1_1, pc1_2, pc2_1, pc2_2;
-	double crpix1, crpix2;
+	point refpointout;
 
-	/*  the angle will be mapped to the range of [-360, 360] */
-	angle = (fmod((angle / 90), 4)) * 90;
+	const double2 sincosval = xsincos(angle * DEGTORAD);
+	double sa, ca;
+	sa = sincosval.x;
+	ca = sincosval.y;
 
-	if (angle == 90.0) {
-		pc1_1 =  fit->wcsdata.pc[0][1];
-		pc1_2 = -fit->wcsdata.pc[0][0];
-		pc2_1 =  fit->wcsdata.pc[1][1];
-		pc2_2 = -fit->wcsdata.pc[1][0];
-		crpix1 = fit->wcsdata.crpix[1];
-		crpix2 = fit->ry - fit->wcsdata.crpix[0];
-	} else if (angle == 180.0){
-		pc1_1 = -fit->wcsdata.pc[0][0];
-		pc1_2 = -fit->wcsdata.pc[0][1];
-		pc2_1 = -fit->wcsdata.pc[1][0];
-		pc2_2 = -fit->wcsdata.pc[1][1];
-		crpix1 = fit->rx - fit->wcsdata.crpix[0];
-		crpix2 = fit->ry - fit->wcsdata.crpix[1];
-	} else if (angle == 270.0) {
-		pc1_1 = -fit->wcsdata.pc[0][1];
-		pc1_2 =  fit->wcsdata.pc[0][0];
-		pc2_1 = -fit->wcsdata.pc[1][1];
-		pc2_2 =  fit->wcsdata.pc[1][0];
-		crpix1 = fit->rx - fit->wcsdata.crpix[1];
-		crpix2 = fit->wcsdata.crpix[0];
-	} else return;
+	pc1_1 =  ca * fit->wcsdata.pc[0][0] + sa * fit->wcsdata.pc[0][1];
+	pc1_2 = -sa * fit->wcsdata.pc[0][0] + ca * fit->wcsdata.pc[0][1];
+	pc2_1 =  ca * fit->wcsdata.pc[1][0] + sa * fit->wcsdata.pc[1][1];
+	pc2_2 = -sa * fit->wcsdata.pc[1][0] + ca * fit->wcsdata.pc[1][1];
+
+	point refpointin = {fit->wcsdata.crpix[0], fit->wcsdata.crpix[1]};
+	cvRotateImageRefPoint(fit, center, angle, cropped, refpointin, &refpointout); 
 
 	fit->wcsdata.pc[0][0] = pc1_1;
 	fit->wcsdata.pc[0][1] = pc1_2;
 	fit->wcsdata.pc[1][0] = pc2_1;
 	fit->wcsdata.pc[1][1] = pc2_2;
-	fit->wcsdata.crpix[0] = crpix1;
-	fit->wcsdata.crpix[1] = crpix2;
+	fit->wcsdata.crpix[0] = refpointout.x;
+	fit->wcsdata.crpix[1] = refpointout.y;
 
-	/* debug output */
-	siril_debug_print("****Updated WCS data*************\n");
-	siril_debug_print("crpix1 = %*.12e\n", 20, fit->wcsdata.crpix[0]);
-	siril_debug_print("crpix2 = %*.12e\n", 20, fit->wcsdata.crpix[1]);
-	siril_debug_print("crval1 = %*.12e\n", 20, fit->wcsdata.crval[0]);
-	siril_debug_print("crval2 = %*.12e\n", 20, fit->wcsdata.crval[1]);
-	siril_debug_print("cdelt1 = %*.12e\n", 20, fit->wcsdata.cdelt[0]);
-	siril_debug_print("cdelt2 = %*.12e\n", 20, fit->wcsdata.cdelt[1]);
-	siril_debug_print("pc1_1  = %*.12e\n", 20, fit->wcsdata.pc[0][0]);
-	siril_debug_print("pc1_2  = %*.12e\n", 20, fit->wcsdata.pc[0][1]);
-	siril_debug_print("pc2_1  = %*.12e\n", 20, fit->wcsdata.pc[1][0]);
-	siril_debug_print("pc2_2  = %*.12e\n", 20, fit->wcsdata.pc[1][1]);
-	siril_debug_print("******************************************\n");
+	print_updated_wcs_data(fit);
+}
+
+void crop_astrometry_data(fits *fit, point shift) {
+	fit->wcsdata.crpix[0] -= shift.x;
+	fit->wcsdata.crpix[1] -= shift.y;
+
+	print_updated_wcs_data(fit);
+	load_WCS_from_memory(fit); //need to update before pix2wcs - will be called once again by the crop function to update ra/dec
+
+	pix2wcs(fit, (double)(fit->rx) /2 , (double)(fit->ry) /2 , &fit->wcsdata.ra, &fit->wcsdata.dec);
+	if (fit->wcsdata.ra != -1.) update_coords(); //to have plate solve window well-centered in case of subsequent call
 }
 
 void wcs_cd_to_pc(double cd[2][2], double pc[2][2], double cdelt[2]) {
-
 	extract_cdelt_from_cd(cd[0][0], cd[0][1], cd[1][0], cd[1][1], &cdelt[0], &cdelt[1]);
 
 	pc[0][0] = cd[0][0] / cdelt[0];
