@@ -14,6 +14,7 @@ v0.99.12 xx xxxx, xxxx
 * New choices of degrees of freedom (shift, affine or homography) for global registration
 * Seqcrop command can now be used in scripts
 * Added autocropping of wide-field images, as well as using a selection for plate solving
+* WCS data is now updated after geometric transformations (mirror, rotate and crop)
 
 v0.99.10.1 June 23, 2021
 Patch version to fix some issues
