@@ -14,6 +14,7 @@ xx/xx/xx
 * New choices of degrees of freedom (shift, affine or homography) for global registration
 * Seqcrop command can now be used in scripts
 * Added autocropping of wide-field images, as well as using a selection for plate solving
+* WCS data is now updated after geometric transformations (mirror, rotate and crop)
 
 siril 0.99.10.1
 06/23/21
